--- a/Node-js/package.json
+++ b/Node-js/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon 7b-NodeServer.js"
   },
   "author": "Adarsh Singh",
   "license": "ISC",
