Node In Profress > Making server endpoints with Node. > Made changes in data.json introducing new field dummy original price > 8b-index.html is a dummy html file with just some plane simple text only > 8c-index.html is a product card template. > error.html is a custom error page

--- a/Node-js/package.json
+++ b/Node-js/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon 7b-NodeServer.js"
+    "dev": "nodemon 8d-NodeServerEndpoints.js"
   },
   "author": "Adarsh Singh",
   "license": "ISC",
