--- a/Express-js/package.json
+++ b/Express-js/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon 2f-BuiltIn-Middleware.js"
+    "dev": "nodemon 3-RestAPI.js"
   },
   "repository": {
     "type": "git",
